dashboard/istio-gateway-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: istio-gateway-ingress
  namespace: istio-system
spec:
  rules:
  - host: '*.istio.dfwsgroup.cn'
    http:
      paths:
      - backend:
          serviceName: istio-ingressgateway
          servicePort: 80
        path: /
