dashboard/istio-tracing-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tracing
  annotations:
    kubernetes.io/ingress.class: "nginx"
    #nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    #nginx.ingress.kubernetes.io/secure-backends: "true"
    #nginx.ingress.kubernetes.io/rewrite-target: "/"
spec:
  #tls:
  #- hosts:
  #  - dashboard.cluster.dfwsgroup.cn
  #  secretName: kubernetes-dashboard
  rules:
  - host: tracing.istio.dfwsgroup.cn
    http:
      paths:
      - path: /
        backend:
          serviceName: tracing
          servicePort: 80
